added federalist papers; application now able to index subdirectories with both combines and individual index folders